Layout fix on IE

--- a/code/wp-content/themes/marksales/style.css
+++ b/code/wp-content/themes/marksales/style.css
@@ -20,6 +20,10 @@ html, body {
 	height: 100%;
 }
 
+img {
+	border-width: 0; /* For IE */
+}
+
 a {
 	color: #7d7d7d;
 	text-decoration: none;
